--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -277,6 +277,12 @@
     <Filter Include="02. GameObject\13. FixedObj\02. Glass">
       <UniqueIdentifier>{b9c23f31-194a-4f2e-9582-070b905d60a1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="97. Util">
+      <UniqueIdentifier>{2bd5d4f2-60da-4fe3-ac55-179bbcd25909}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="97. Util\00. Pool">
+      <UniqueIdentifier>{bc94a776-1511-4e3d-94ff-f263b7ad6739}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -589,6 +595,9 @@
     <ClInclude Include="..\Header\UI_Totem.h" />
     <ClInclude Include="..\Header\Grass.h">
       <Filter>02. GameObject\13. FixedObj\02. Glass</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\Pool.h">
+      <Filter>97. Util\00. Pool</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
