Fix : ".cpp 파일 이동"

--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -226,20 +226,8 @@
     <Filter Include="02. GameObject\10. Boss\00. SunGolem\06. Face">
       <UniqueIdentifier>{a00df816-fc45-4dc9-ab2c-41c6339597cb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02. GameObject\13. FixedObj">
-      <UniqueIdentifier>{5de803c5-82d7-4586-9ed4-2e2de49c9531}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02. GameObject\98. Effect">
       <UniqueIdentifier>{949fa1cf-fe2d-4f87-a9e6-e98c9ab0402d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02. GameObject\13. FixedObj\00. Tree">
-      <UniqueIdentifier>{dd098577-767a-4f2d-92d6-ae6ebb1488d8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02. GameObject\14. Tile">
-      <UniqueIdentifier>{17d996c8-d91c-4860-b76a-282f2a6080cc}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02. GameObject\13. FixedObj\01. House">
-      <UniqueIdentifier>{1b18d9ea-8f5d-4c79-a808-a4047c32b98c}</UniqueIdentifier>
     </Filter>
     <Filter Include="98. Manager">
       <UniqueIdentifier>{d3ea15ca-2d7c-47b8-8c2f-d26d0779445f}</UniqueIdentifier>
@@ -277,8 +265,20 @@
     <Filter Include="98. Manager\03. Inventory">
       <UniqueIdentifier>{09146d52-6d44-40ef-8ce3-981c8bfc7d6f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02. GameObject\13. FixedObj\02. Glass">
+    <Filter Include="02. GameObject\12. FixedObj">
+      <UniqueIdentifier>{5de803c5-82d7-4586-9ed4-2e2de49c9531}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\12. FixedObj\00. Tree">
+      <UniqueIdentifier>{dd098577-767a-4f2d-92d6-ae6ebb1488d8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\12. FixedObj\01. House">
+      <UniqueIdentifier>{1b18d9ea-8f5d-4c79-a808-a4047c32b98c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\12. FixedObj\02. Glass">
       <UniqueIdentifier>{b9c23f31-194a-4f2e-9582-070b905d60a1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\13. Tile">
+      <UniqueIdentifier>{17d996c8-d91c-4860-b76a-282f2a6080cc}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -288,9 +288,6 @@
     <ClInclude Include="..\Header\Logo.h">
       <Filter>01. Scene\00. Logo</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\BackGround.h">
-      <Filter>02. GameObject\00. BackGround</Filter>
-    </ClInclude>
     <ClInclude Include="..\Header\Player.h">
       <Filter>02. GameObject\01. Player</Filter>
     </ClInclude>
@@ -299,9 +296,6 @@
     </ClInclude>
     <ClInclude Include="..\Header\Terrain.h">
       <Filter>02. GameObject\03. Terrain</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Header\Stage.h">
-      <Filter>01. Scene\01. Stage</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\CUI.h">
       <Filter>02. GameObject\04. UI</Filter>
@@ -329,9 +323,6 @@
     </ClInclude>
     <ClInclude Include="..\Header\PushableObj.h">
       <Filter>02. GameObject\06. FieldObj\00. PushableObj</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Header\GrabbableObj.h">
-      <Filter>02. GameObject\06. FieldObj\01. GrabbableObj</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\OnEventObj.h">
       <Filter>02. GameObject\08. OnEventObj</Filter>
@@ -553,16 +544,16 @@
       <Filter>02. GameObject\98. Effect</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\FixedObj.h">
-      <Filter>02. GameObject\13. FixedObj</Filter>
+      <Filter>02. GameObject\12. FixedObj</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Tree.h">
-      <Filter>02. GameObject\13. FixedObj\00. Tree</Filter>
+      <Filter>02. GameObject\12. FixedObj\00. Tree</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Tile.h">
-      <Filter>02. GameObject\14. Tile</Filter>
+      <Filter>02. GameObject\13. Tile</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\House.h">
-      <Filter>02. GameObject\13. FixedObj\01. House</Filter>
+      <Filter>02. GameObject\12. FixedObj\01. House</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\UI_AdventureBook.h">
       <Filter>02. GameObject\04. UI\03. AdventureBook</Filter>
@@ -593,7 +584,7 @@
     <ClInclude Include="..\Header\UI_Shop.h" />
     <ClInclude Include="..\Header\UI_Totem.h" />
     <ClInclude Include="..\Header\Grass.h">
-      <Filter>02. GameObject\13. FixedObj\02. Glass</Filter>
+      <Filter>02. GameObject\12. FixedObj\02. Glass</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Player_Bullet_Lightning.h" />
     <ClInclude Include="..\Header\Player_Skill_Lightning.h" />
@@ -614,6 +605,13 @@
     </ClInclude>
     <ClInclude Include="..\Header\Player_Bullet_Bomb.h" />
     <ClInclude Include="..\Header\Player_Skill_Missile.h" />
+    <ClInclude Include="..\Header\FistEffect.h" />
+    <ClInclude Include="..\Header\GreenBeatle.h" />
+    <ClInclude Include="..\Header\Loading.h" />
+    <ClInclude Include="..\Header\Pool.h" />
+    <ClInclude Include="..\Header\RedBeatle.h" />
+    <ClInclude Include="..\Header\UI_Cursor.h" />
+    <ClInclude Include="..\Header\UI_ItemInfo.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -621,9 +619,6 @@
     </ClCompile>
     <ClCompile Include="..\Code\Logo.cpp">
       <Filter>01. Scene\00. Logo</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Code\BackGround.cpp">
-      <Filter>02. GameObject\00. BackGround</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\Player.cpp">
       <Filter>02. GameObject\01. Player</Filter>
@@ -633,9 +628,6 @@
     </ClCompile>
     <ClCompile Include="..\Code\Terrain.cpp">
       <Filter>02. GameObject\03. Terrain</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Code\Stage.cpp">
-      <Filter>01. Scene\01. Stage</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\CUI.cpp">
       <Filter>02. GameObject\04. UI</Filter>
@@ -655,9 +647,6 @@
     </ClCompile>
     <ClCompile Include="..\Code\PushableObj.cpp">
       <Filter>02. GameObject\06. FieldObj\00. PushableObj</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Code\GrabbableObj.cpp">
-      <Filter>02. GameObject\06. FieldObj\01. GrabbableObj</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\OnEventObj.cpp">
       <Filter>02. GameObject\08. OnEventObj</Filter>
@@ -870,16 +859,13 @@
       <Filter>02. GameObject\98. Effect</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\FixedObj.cpp">
-      <Filter>02. GameObject\13. FixedObj</Filter>
+      <Filter>02. GameObject\12. FixedObj</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\Tree.cpp">
-      <Filter>02. GameObject\13. FixedObj\00. Tree</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Header\Tile.cpp">
-      <Filter>02. GameObject\14. Tile</Filter>
+      <Filter>02. GameObject\12. FixedObj\00. Tree</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\House.cpp">
-      <Filter>02. GameObject\13. FixedObj\01. House</Filter>
+      <Filter>02. GameObject\12. FixedObj\01. House</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\UI_AdventureBook.cpp">
       <Filter>02. GameObject\04. UI\03. AdventureBook</Filter>
@@ -913,7 +899,7 @@
     <ClCompile Include="..\Code\UI_Shop.cpp" />
     <ClCompile Include="..\Code\UI_Totem.cpp" />
     <ClCompile Include="..\Code\Grass.cpp">
-      <Filter>02. GameObject\13. FixedObj\02. Glass</Filter>
+      <Filter>02. GameObject\12. FixedObj\02. Glass</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\Player_Bullet_Lightning.cpp" />
     <ClCompile Include="..\Code\Player_Skill_Lightning.cpp" />
@@ -934,6 +920,15 @@
     </ClCompile>
     <ClCompile Include="..\Code\Player_Bullet_Bomb.cpp" />
     <ClCompile Include="..\Code\Player_Skill_Missile.cpp" />
+    <ClCompile Include="..\Code\FistEffect.cpp" />
+    <ClCompile Include="..\Code\GreenBeatle.cpp" />
+    <ClCompile Include="..\Code\Loading.cpp" />
+    <ClCompile Include="..\Code\RedBeatle.cpp" />
+    <ClCompile Include="..\Code\UI_Cursor.cpp" />
+    <ClCompile Include="..\Code\UI_ItemInfo.cpp" />
+    <ClCompile Include="..\Code\Tile.cpp">
+      <Filter>02. GameObject\13. Tile</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
